agregando la seccion de stores y musica

--- a/src/components/TextContainer.astro
+++ b/src/components/TextContainer.astro
@@ -1,5 +1,13 @@
+---
+interface Props {
+  className?: string;
+}
+
+const { className } = Astro.props;
+---
+
 <article
-  class="bg-black/70 backdrop-blur-sm w-full text-white shadow-lg flex flex-col items-center py-8 px-4 rounded-xl text-2xl"
+  class={`bg-black/70 backdrop-blur-sm w-full text-white shadow-lg flex flex-col items-center p-4 rounded-xl text-2xl ${className}`}
 >
   <slot />
 </article>
