--- a/src/components/shared/App.astro
+++ b/src/components/shared/App.astro
@@ -10,6 +10,7 @@ import TextContainer from "../TextContainer.astro";
 import SteamItem from "../SteamItem.astro";
 import ItchioItem from "../ItchioItem.astro";
 import BuySection from "../BuySection.astro";
+import MusicSection from "../MusicSection.astro";
 
 // import { getI18N } from "../../i18n";
 // const { currentLocale } = Astro;
@@ -58,5 +59,6 @@ import BuySection from "../BuySection.astro";
     </section>
 
     <BuySection />
+    <MusicSection />
   </main>
 </Layout>
