--- a/src/components/TextContainer.astro
+++ b/src/components/TextContainer.astro
@@ -7,7 +7,7 @@ const { className } = Astro.props;
 ---
 
 <article
-  class={`bg-black/70 backdrop-blur-sm w-full text-white shadow-lg flex flex-col items-center p-4 rounded-xl text-2xl ${className}`}
+  class={`w-full text-white flex flex-col items-center rounded-xl text-2xl ${className}`}
 >
   <slot />
 </article>
