--- a/src/components/shared/App.astro
+++ b/src/components/shared/App.astro
@@ -2,63 +2,63 @@
 import Image from "astro/components/Image.astro";
 
 import Layout from "../../layouts/Layout.astro";
-import Card from "../../components/Card.astro";
 import TrailerVideo from "../TrailerVideo.astro";
 
 import logo from "../../../public/logo.png";
 import TextContainer from "../TextContainer.astro";
-import SteamItem from "../SteamItem.astro";
-import ItchioItem from "../ItchioItem.astro";
-import BuySection from "../BuySection.astro";
+// import SteamItem from "../SteamItem.astro";
+// import ItchioItem from "../ItchioItem.astro";
+// import BuySection from "../BuySection.astro";
 import MusicSection from "../MusicSection.astro";
+import ContentContainer from "../ContentContainer.astro";
+import StoreButton from "../StoreButton.astro";
 
-// import { getI18N } from "../../i18n";
-// const { currentLocale } = Astro;
-// const i18n = getI18N({ currentLocale });
+import { getI18N } from "../../i18n";
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
 <Layout title="I Wani Hug That Gator">
-  <main
-    class="text-white flex flex-col justify-center items-center w-full max-w-[1000px] py-7 gap-8"
+  <header
+    class="flex flex-col items-center justify-center w-full min-h-[500px] gap-2 relative"
   >
-    <header
-      class="flex flex-col items-center justify-center w-full gap-2 relative"
+    <Image src={logo} alt={"logo"} class="w-full max-w-96" loading={"eager"} />
+    <!-- <video src="/videos/anim_logoaltmask.webm" autoplay muted class="w-full max-w-96"></video> -->
+
+    <span class="text-xl font-semibold text-green-300"
+      >The Prehistoric Romance a million-and-one years in the making!</span
     >
-      <!-- <h1 class="font-bold text-6xl text-center">Welcome to</h1> -->
-      <!-- <span
-        class="font-bold text-6xl text-center bg-gradient-to-r from-purple-400 to-green-400 bg-clip-text text-transparent"
-        >I Wani Hug That Gator</span
-      > -->
-      <Image
-        src={logo}
-        alt={"logo"}
-        class="w-full max-w-96"
-        loading={"eager"}
-      />
-      <!-- <span
-        class="px-2 py-1 absolute border-2 border-red-600 text-red-600 bg-white font-semibold rounded-2xl bottom-7 right-[240px]"
-        >Now available!</span
-      > -->
-
-      <span class="text-xl font-semibold text-green-300"
-        >The Prehistoric Romance a million-and-one years in the making!</span
-      >
-    </header>
-
-    <section class="w-full flex flex-col gap-8 items-center px-8 lg:px-0">
+  </header>
+  <main
+    class="text-white flex flex-col justify-center items-center w-full pt-7 pb-10
+    gap-8 bg-gradient-to-t from-emerald-950/75 to-slate-700/75 backdrop-blur-lg"
+  >
+    <section class="w-full flex flex-col gap-8 items-center px-8 lg:px-0 py-10">
       <TrailerVideo />
-      <TextContainer>
-        <p>
-          <span class="text-green-500"> I Wani Hug that Gator! </span>
-          is a choice-driven narrative about teenagers struggling to find their way.
-          Help Inco, loser highschooler extraordinaire, navigate his budding friendships
-          (and romance!) while surviving being the only human in a dinosaur-filled
-          school.
-        </p>
-      </TextContainer>
+      <div class="flex flex-col md:flex-row gap-4">
+        <StoreButton
+          name="Steam"
+          link="https://store.steampowered.com/app/1895350/I_Wani_Hug_that_Gator/"
+        />
+        <StoreButton
+          name="Itchio"
+          link="https://cavemanon.itch.io/i-wani-hug-that-gator"
+        />
+      </div>
+      <ContentContainer>
+        <TextContainer>
+          <p class="max-w-[800px]">
+            <span class="text-green-500"> I Wani Hug that Gator! </span>
+            is a choice-driven narrative about teenagers struggling to find their
+            way. Help Inco, loser highschooler extraordinaire, navigate his budding
+            friendships (and romance!) while surviving being the only human in a
+            dinosaur-filled school.
+          </p>
+        </TextContainer>
+      </ContentContainer>
     </section>
 
-    <BuySection />
+    <!-- <BuySection /> -->
     <MusicSection />
   </main>
 </Layout>
