--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import NavBar from '../components/NavBar.astro';
 
 interface Props {
@@ -18,10 +19,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class=" flex flex-col items-center relative">
+  <body class=" flex flex-col items-center relative ">
     <NavBar />
     <div class="bg-room object-cover w-screen h-screen fixed -z-10"></div>
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
