--- a/src/components/StoreButton.astro
+++ b/src/components/StoreButton.astro
@@ -28,6 +28,6 @@ const { name, link } = Astro.props;
     class={`mr-3 size-[40px] ${name === "Itchio" && "invert"}`}
     loading={"eager"}
   />
-  <span class="text-2xl font-semibold">Buy On Steam</span>
+  <span class="text-2xl font-semibold">Buy On {name}</span>
 </a>
 <!-- loading={"eager"} -->
