arreglando el header

--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -7,7 +7,7 @@ const { titles } = Astro.props;
 ---
 
 <section
-  class="w-full flex flex-col gap-8 items-center px-8 lg:px-0 py-10 max-w-[1000px]"
+  class="w-full flex flex-col gap-8 items-center px-8 py-5 lg:px-0 max-w-[1000px]"
 >
   {
     titles && (
