--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
 
 import grapImg from "../../public/grap-image.jpg";
+import HeaderContainer from "../components/HeaderContainer.astro";
 
 interface Props {
   title: string;
@@ -34,9 +35,15 @@ const description =
     <title>{title}</title>
   </head>
   <body class="flex flex-col items-center relative">
-    <NavBar />
     <div class="bg-room object-cover w-screen h-screen fixed -z-10"></div>
-    <slot />
+    <NavBar />
+    <HeaderContainer />
+    <main
+      class="text-white flex flex-col justify-center items-center w-full py-8
+    bg-gradient-to-t to-slate-700/75 via-emerald-950/75 from-violet-950/75 backdrop-blur-lg"
+    >
+      <slot />
+    </main>
     <Footer />
   </body>
 </html>
@@ -67,5 +74,10 @@ const description =
       Bitstream Vera Sans Mono,
       Courier New,
       monospace;
+  }
+
+  span {
+    --tw-text-opacity: 1;
+    color: rgb(34 197 94 / var(--tw-text-opacity));
   }
 </style>
