--- a/src/components/LenguageSelector.astro
+++ b/src/components/LenguageSelector.astro
@@ -11,13 +11,13 @@ const LOCALES: Record<
 > = {
   en: {
     code: "en",
-    href: "/en",
+    href: "/",
     name: "English",
     flag: USAFlag,
   },
   es: {
     code: "es",
-    href: "/",
+    href: "/es",
     name: "Español",
     flag: SpainFlag,
   },
