--- a/src/components/MusicItem.astro
+++ b/src/components/MusicItem.astro
@@ -29,7 +29,7 @@ const { image, htext, text, items } = Astro.props;
 
   <TextContainer className="">
     <p class="text-xl">
-      <span class="text-green-500">{htext}</span>
+      <span>{htext}</span>
       {text}
     </p>
   </TextContainer>
