--- a/src/components/MusicSection.astro
+++ b/src/components/MusicSection.astro
@@ -5,26 +5,27 @@ import ostCoverB from "../../public/ost_cover_b.webp";
 import SectionContainer from "./SectionContainer.astro";
 
 import { coverALink, coverBLink } from "../consts/musicLinks";
+
+import { getI18N } from "../i18n";
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
-<SectionContainer titles="Awsome Soundtrack">
+<SectionContainer titles={i18n!.HomePage.MusicSection.Title}>
   <div
     class="w-full grid gap-12 items-start grid-cols-1 lg:px-24 lg:grid-cols-2 
      max-w-[1000px] xl:px-0"
   >
     <MusicItem
       image={ostCoverA}
-      htext="Featuring over 3 hours of original songs,"
-      text={`this side contains the more scene specific and motif focused tracks. A collage
-        of different genres and styles, from indie rock and electronic to modern composition
-        and pop.`}
+      htext={i18n!.HomePage.MusicSection.CoverA.htext}
+      text={i18n!.HomePage.MusicSection.CoverA.text}
       items={coverALink}
     />
     <MusicItem
       image={ostCoverB}
-      htext="Featuring the works of 8 musicians,"
-      text={`this side is a compilation of free music used typically when the story relaxes; Has a bit of lo-fi, 
-      electronica, rock, accoustics, and synthy goodness.`}
+      htext={i18n!.HomePage.MusicSection.CoverB.htext}
+      text={i18n!.HomePage.MusicSection.CoverB.text}
       items={coverBLink}
     />
   </div>
