coloconado bien el nombre

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -18,7 +18,7 @@ const i18n = getI18N({ currentLocale });
       link="https://store.steampowered.com/app/1895350/I_Wani_Hug_that_Gator/"
     />
     <StoreButton
-      name="Itchio"
+      name="Itch.io"
       link="https://cavemanon.itch.io/i-wani-hug-that-gator"
     />
   </div>
