--- a/src/components/StoreButton.astro
+++ b/src/components/StoreButton.astro
@@ -8,7 +8,7 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 
 interface Props {
-  name: "Steam" | "Itchio";
+  name: "Steam" | "Itch.io";
   link: string;
 }
 
@@ -29,7 +29,7 @@ const { name, link } = Astro.props;
   <Image
     src={name === "Steam" ? steamLogo : itchioLogo}
     alt={`${name.toLocaleLowerCase()}-logo`}
-    class={`mr-3 size-[40px] ${name === "Itchio" && "invert"}`}
+    class={`mr-3 size-[40px] ${name === "Itch.io" && "invert"}`}
     loading={"eager"}
   />
   <span class="text-2xl font-semibold text-white"
