agregando 2 secciones más

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -23,6 +23,6 @@ const i18n = getI18N({ currentLocale });
     />
   </div>
   <TextContainer>
-    <p class="w-full" set:html={i18n!.HomePage.HeroSection.principalText} />
+    <p set:html={i18n!.HomePage.HeroSection.principalText} />
   </TextContainer>
 </SectionContainer>
