--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -11,7 +11,7 @@ const { titles } = Astro.props;
 >
   {
     titles && (
-      <h2 class="text-center font-bold text-4xl mb-2 md:mb-0">{titles}</h2>
+      <h2 class="text-center font-bold text-3xl md:text-4xl mb-2 md:mb-0 text-green-400">{titles}</h2>
     )
   }
   <slot />
