--- a/src/components/shared/App.astro
+++ b/src/components/shared/App.astro
@@ -5,11 +5,15 @@ import HeroSection from "../HeroSection.astro";
 import HeaderContainer from "../HeaderContainer.astro";
 
 import { getI18N } from "../../i18n";
+import IntroSection from "../IntroSection.astro";
+import WaitSection from "../WaitSection.astro";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
 <Layout title="I Wani Hug That Gator">
   <HeroSection />
+  <IntroSection />
+  <WaitSection />
   <MusicSection />
 </Layout>
