--- a/src/components/shared/App.astro
+++ b/src/components/shared/App.astro
@@ -7,6 +7,7 @@ import HeaderContainer from "../HeaderContainer.astro";
 import { getI18N } from "../../i18n";
 import IntroSection from "../IntroSection.astro";
 import WaitSection from "../WaitSection.astro";
+import DrawingSection from "../DrawingSection.astro";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
@@ -15,5 +16,6 @@ const i18n = getI18N({ currentLocale });
   <HeroSection />
   <IntroSection />
   <WaitSection />
+  <DrawingSection />
   <MusicSection />
 </Layout>
