--- a/src/components/TrailerVideo.astro
+++ b/src/components/TrailerVideo.astro
@@ -1,4 +1,4 @@
-<div class="w-[80vw] max-w-[1000px] h-full">
+<div class="w-full max-w-[1000px]">
   <iframe
     class="aspect-video w-full h-full overflow-hidden rounded-xl"
     src="https://www.youtube.com/embed/gLktsDflPWU?si=UbrWMzwdSCN9Fu3b"
