--- a/src/components/MusicItem.astro
+++ b/src/components/MusicItem.astro
@@ -16,7 +16,7 @@ const { image, htext, text, items } = Astro.props;
 ---
 
 <article class="w-full flex flex-col justify-center items-center gap-6">
-  <Image src={image} alt={"Album"} class="w-full" />
+  <Image src={image} alt={"Album"} class="w-full sm:px-28 xl:px-0" />
   <!-- {links && links.} -->
   <div class="flex flex-wrap gap-3 justify-center items-center">
     {
@@ -28,7 +28,7 @@ const { image, htext, text, items } = Astro.props;
   </div>
 
   <TextContainer className="">
-    <p class="text-xl">
+    <p class="">
       <span>{htext}</span>
       {text}
     </p>
