--- a/src/components/MusicSection.astro
+++ b/src/components/MusicSection.astro
@@ -13,7 +13,7 @@ const i18n = getI18N({ currentLocale });
 
 <SectionContainer titles={i18n!.HomePage.MusicSection.Title}>
   <div
-    class="w-full grid gap-12 items-start grid-cols-1 lg:px-24 lg:grid-cols-2 
+    class="w-full grid gap-12 items-start grid-cols-1 xl:grid-cols-2 
      max-w-[1000px] xl:px-0"
   >
     <MusicItem
