--- a/src/components/MusicItem.astro
+++ b/src/components/MusicItem.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 import soundtrackImg from "../../public/ost_cover_a.webp";
-import TextContainer from "./TextContainer.astro";
-import CustomButton from "./CustomButton.astro";
+import TextContainer from "./containers/TextContainer.astro";
+import CustomButton from "./shared/CustomButton.astro";
 import type { LinkModel } from "../models/LinkModel";
 
 interface Props {
