--- a/src/components/homePage/sections/BuySection.astro
+++ b/src/components/homePage/sections/BuySection.astro
@@ -1,6 +1,6 @@
 ---
-import ItchioItem from "./ItchioItem.astro";
-import SteamItem from "./SteamItem.astro";
+import ItchioItem from "../../shared/ItchioItem.astro";
+import SteamItem from "../../shared/SteamItem.astro";
 ---
 
 <section class="w-full flex flex-col items-center px-8 lg:px-0">
