--- a/src/components/homePage/sections/DrawingSection.astro
+++ b/src/components/homePage/sections/DrawingSection.astro
@@ -1,13 +1,13 @@
 ---
 import { getImage } from "astro:assets";
 
-import { DrawingsGallery } from "./DrawingsGallery";
-import SectionContainer from "./SectionContainer.astro";
+import { DrawingsGallery } from "../DrawingsGallery";
+import SectionContainer from "../../containers/SectionContainer.astro";
 
-import drawing1 from "../../public/drawings/drawing1.webp";
-import drawing2 from "../../public/drawings/drawing2.webp";
-import drawing3 from "../../public/drawings/drawing3.webp";
-import drawing4 from "../../public/drawings/drawing4.webp";
+import drawing1 from "../../../../public/drawings/drawing1.webp";
+import drawing2 from "../../../../public/drawings/drawing2.webp";
+import drawing3 from "../../../../public/drawings/drawing3.webp";
+import drawing4 from "../../../../public/drawings/drawing4.webp";
 
 const optimizedDrawing1 = await getImage({ src: drawing1, format: "webp" });
 const optimizedDrawing2 = await getImage({ src: drawing2, format: "webp" });
