--- a/src/components/shared/CustomButton.astro
+++ b/src/components/shared/CustomButton.astro
@@ -1,5 +1,5 @@
 ---
-import type { LinkModel } from "../models/LinkModel";
+import type { LinkModel } from "../../models/LinkModel";
 
 interface Props extends LinkModel {}
 
