--- a/src/components/shared/StoreButton.astro
+++ b/src/components/shared/StoreButton.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import steamLogo from "../../public/icons/steam-logo.png";
-import itchioLogo from "../../public/icons/itch_io_logo_icon.png";
+import steamLogo from "../../../public/icons/steam-logo.png";
+import itchioLogo from "../../../public/icons/itch_io_logo_icon.png";
 
-import { getI18N } from "../i18n";
+import { getI18N } from "../../i18n";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 
