--- a/src/components/containers/HeaderContainer.astro
+++ b/src/components/containers/HeaderContainer.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../../public/logo.png";
+import logo from "../../../public/logo.png";
 
-import { getI18N } from "../i18n";
+import { getI18N } from "../../i18n";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
