--- a/src/components/homePage/sections/HeroSection.astro
+++ b/src/components/homePage/sections/HeroSection.astro
@@ -1,11 +1,11 @@
 ---
 // import ContentContainer from "./ContentContainer.astro";
-import SectionContainer from "./SectionContainer.astro";
-import StoreButton from "./StoreButton.astro";
-import TextContainer from "./TextContainer.astro";
-import TrailerVideo from "./TrailerVideo.astro";
+import SectionContainer from "../../containers/SectionContainer.astro";
+import StoreButton from "../../shared/StoreButton.astro";
+import TextContainer from "../../containers/TextContainer.astro";
+import TrailerVideo from "../TrailerVideo.astro";
 
-import { getI18N } from "../i18n";
+import { getI18N } from "../../../i18n";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
