--- a/src/components/homePage/sections/WaitSection.astro
+++ b/src/components/homePage/sections/WaitSection.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
-import SectionContainer from "./SectionContainer.astro";
-import TextContainer from "./TextContainer.astro";
+import SectionContainer from "../../containers/SectionContainer.astro";
+import TextContainer from "../../containers/TextContainer.astro";
 
-import oliviaScreenshot from "../../public/screenshots/olivia-screenshot.webp";
+import oliviaScreenshot from "../../../../public/screenshots/olivia-screenshot.webp";
 
-import { getI18N } from "../i18n";
+import { getI18N } from "../../../i18n";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
