creando la prueba de path estaticos

--- a/src/components/LenguageSelector.astro
+++ b/src/components/LenguageSelector.astro
@@ -1,7 +1,7 @@
 ---
 import SpainFlag from "./icons/SpainFlag.astro";
 import USAFlag from "./icons/USAFlag.astro";
-import ChevronIcon from "./icons/Chevron.astro"
+import ChevronIcon from "./icons/Chevron.astro";
 
 const { currentLocale = "es" } = Astro;
 
