--- a/src/layouts/CharacterLayout.astro
+++ b/src/layouts/CharacterLayout.astro
@@ -4,13 +4,16 @@ import NavBar from "../components/NavBar.astro";
 
 import grapImg from "../../public/grap-image.jpg";
 import HeaderContainer from "../components/containers/HeaderContainer.astro";
+import type { CharacterType } from "../models/CharacterType";
 
 interface Props {
   title: string;
+  char: CharacterType
 }
 
 const { title } = Astro.props;
 const { currentLocale } = Astro;
+
 
 const description =
   "I Wani Hug that Gator! is a choice-driven narrative about teenagers struggling to find their way. Help Inco, loser highschooler extraordinaire, navigate his budding friendships (and romance!) while surviving being the only human in a dinosaur-filled school.";
