--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -9,6 +9,7 @@ import DrawingSection from "../homePage/sections/DrawingSection.astro";
 
 
 import { getI18N } from "../../i18n";
+import CharSection from "../homePage/sections/CharSection.astro";
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
@@ -17,6 +18,7 @@ const i18n = getI18N({ currentLocale });
   <HeroSection />
   <IntroSection />
   <WaitSection />
+  <CharSection />
   <DrawingSection />
   <MusicSection />
 </Layout>
