agregando el cast

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,6 +17,7 @@ const { className } = Astro.props;
 
 <footer
   class={`min-h-[100px] w-full bg-zinc-900 text-white py-4 px-6 flex justify-between items-center ${className}`}
+  transition:name="footer-transition"
 >
   <div>
     <small class="text-base"
